<?xml version="1.0" encoding="utf-8"?>
<resources>
    
        <!-- Please put your application's app ID and keys here -->
    <string name="parse_app_id">pU5pZWL3KWOHTWWk2E0V1Ej54gvABbWHDdk31SQy</string>
    <string name="parse_client_key">i3FvaOGnXq3IvWJSwkxpdaBT7FyWGL3cvRfK0ih8</string>
    <string name="facebook_app_id">348131288692341</string>
    <string name="twitter_consumer_key">YOUR_TWITTER_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret">YOUR_TWITTER_CONSUMER_SECRET</string>

    <string name="app_name">Botão do Pânico</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Sair</string>
    <string name="action_ajuda">Ajuda</string>
    <string name="title_activity_cadastro">Botão do Pânico</string>
    <string name="title_activity_cadastro_alarme">Botão do Pânico</string>
    <string name="title_activity_escolha_tipo_alarme">Botão do Pânico</string>
    <string name="title_activity_cadastro_alarme_evento">Botão do Pânico</string>
    <string name="title_activity_cadastro_alarme_codigo">Botão do Pânico</string>
    <string name="title_activity_modo_funcionamento">Botão do Pânico</string>
    <string name="title_activity_ajuda">Botão do Pânico</string>
    <string name="title_activity_cadastro_destinatario">Botão do Pânico</string>
    <string name="nome">nome</string>
    <string name="activity_cadastro">Cadastro / Login</string>
    <string name="activity_ajuda">Ajuda</string>
    <string name="senha">senha</string>
    <string name="confirmar_senha">confirmar senha</string>
    <string name="email">email</string>
    <string name="configurar">Configurar</string>
    <string name="usuarioLogado">Olá </string>
    <string name="logAlerta">Log Alerta</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="activity_modo_funcionamento_title">Termos de Serviço</string>
    <string name="activity_modo_funcionamento_btn_background">Background</string>
    <string name="activity_modo_funcionamento_btn_visivel">Visível</string>
    <string name="activity_cadastro_destinatario_txt_title">Adicionar Número</string>
    <string name="activity_cadastro_destinatario_btn_importar_agenda">Importar da Agenda</string>
    <string name="activity_cadastro_destinatario_btn_adicionar">Adicionar</string>
    <string name="activity_cadastro_destinatario_btn_salvar">Salvar</string>
    <string name="activity_ajuda_title">Ajuda</string>
    <string name="activity_ajuda_btn_finalizar">Finalizar</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="ajuda_modo_de_uso">Para utilizar a aplicação, é necessário seguir os seguintes passos.\n
        							 1- Criar uma conta.\n
        							 2- Definir os contatos para os quais os alertas serão enviados.\n
        							 3- Ativar a aplicação através do botão Ativar na tela principal.\n</string>
    <string name="ajuda_configuracao">Após realizar o cadastro, selecione o botão configurações para definir os contatos que receberão os alertas de perigo.\nEm seguida defina o padrão do evento para disparar o alarme.\n
        							Caso queira ativar o aplicativo no modo de detecção do evento, escolha o botão ativar na tela principal e informe a combinação de teclas do evento definida no padrão. </string>
    <string name="ajuda_sobre">O aplicativo Botão do Pânico foi desenvolvido pelos alunos Nilton Vasques e Priscila Farias, como trabalho da disciplina Aplicações para Dispositivos móveis, ministrada pelo professor Danilo Reis no curso de Ciência da Computação da Universidade Federal da Bahia.</string>
    <string name="activity_instalacao">Instalação</string>
    <string name="activity_tipo_alarme_btn_evento">Evento</string>
    <string name="activity_texto_contrato">Não faça uso indevido de nossos Serviços. Por exemplo, não interfira com nossos Serviços nem tente acessá-los por um método diferente da interface e das instruções que fornecemos. Você pode usar nossos serviços somente conforme permitido por lei, inclusive leis e regulamentos de controle de exportação e reexportação. Podemos suspender ou deixar de fornecer nossos Serviços se você descumprir nossos termos ou políticas ou se estivermos investigando casos de suspeita de má conduta.O uso de nossos Serviços não lhe confere a propriedade sobre direitos de propriedade intelectual sobre os nossos Serviços ou sobre o conteúdo que você acessar. Você não pode usar conteúdos de nossos Serviços a menos que obtenha permissão.</string>
	<string name="activity_proximo">Próxima</string>
    <string name="activity_aceito_termos_servico">Concordo com os Termos de Serviço</string>
    <string name="activity_tipo_alarme_btn_codigo">Código</string>
    <string name="activity_alarme_codigo_title">Cadastro de Senha</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar Escolha</string>
    <string name="voltar">Voltar p/ tela inicial</string>
    <string name="activity_alarme_evento_title">Escolha de Evento</string>
    <string name="proximo">Próximo</string>
    <string name="criar_novo_padrao">Criar novo padrão</string>
    <string name="activity_alarme_tipo_evento_title">Teste seu Alarme</string>
    <string name="alarme_correto">...</string>
    <string name="activity_alarme_tipo_evento_teste_aqui">Teste aqui</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    
    
    <string name="profile_logo_content_description">Logo</string>
    <string name="profile_title_logged_in">Você está logado como</string>
    <string name="profile_logout_button_label">Sair</string>

    <string name="volCima">Volume de aumentar</string>
    <string name="volBaixo">Volume de diminuir</string>
    
    <string name="btnOp1">Opção 1</string>
    <string name="btnOp2">Opção 2</string>
    <string name="btnOp3">Opção 3</string>
    
    
</resources>
