<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CadastroAlarmeCodigoActivity" >

    <TextView
        android:id="@+id/textView1"
        style="@style/TextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_alarme_tipo_evento_title" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/textView1">
        <Button
	        android:id="@+id/activity_alarme_tipo_alarme_brn_novo_padrao"
	        android:layout_width="match_parent"
	        android:layout_height="60dp"
		    android:layout_marginBottom="40dp" 
		    android:layout_alignParentBottom="true"
	        android:text="@string/criar_novo_padrao" />
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/activity_alarme_tipo_evento_teste_aqui"/>
    </LinearLayout>
    
  
    <Button
        android:id="@+id/activity_alarme_tipo_alarme_btn_proximo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
	    android:layout_marginBottom="40dp" 
	    android:layout_alignParentBottom="true"
        android:text="@string/proximo" />


</RelativeLayout>