<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.ufba.matc89.botaodopanico.EscolhaTipoAlarmeActivity" >

    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@style/TextTitle"         
        android:text="@string/activity_instalacao"/>

    <Button
        android:id="@+id/btnCadastro"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp"
        android:text="@string/activity_cadastro" />

    <Button
        android:id="@+id/btnAjuda"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/btnCadastro"
        android:layout_below="@+id/btnCadastro"
        android:layout_marginTop="37dp"
        android:text="@string/activity_ajuda" />

</RelativeLayout>