<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.ufba.matc89.botaodopanico.ModoFuncionamentoActivity" >

    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@style/TextTitle"               
        android:text="@string/activity_modo_funcionamento_title"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="80dp"
	        android:text="@string/activity_modo_funcionamento_btn_background"
	        android:layout_marginBottom="20dp" />
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="80dp"
	        android:text="@string/activity_modo_funcionamento_btn_visivel"
	        android:layout_marginTop="20dp" />
    </LinearLayout>

</RelativeLayout>
