<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.ufba.matc89.botaodopanico.InicialActivity" >
<!-- 
    <TextView
        android:id="@+id/txtUsuario"
        style="@style/txtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/txtUsuario" />
-->
    <TextView
        android:id="@+id/usuarioLogado"
        style="@style/usuarioLogado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/usuarioLogado" />
    
	<Button
	    android:id="@+id/btConfigurar"
	    android:layout_height="60dp"
	    android:layout_width="250dp"
	    android:layout_above="@+id/btLogAlerta"
	    android:layout_centerHorizontal="true"
	    android:text="@string/configurar"
	/>
	
    <Button
	    android:id="@+id/btLogAlerta"
	    android:layout_width="250dp"
	    android:layout_height="60dp"
	    android:layout_centerInParent="true"
	    android:layout_centerHorizontal="true"
	    android:text="@string/logAlerta" />
    
	
	<Button
	    android:id="@+id/btBackground"
	    android:layout_height="60dp"
	    android:layout_width="250dp"
	    android:layout_below="@+id/btLogAlerta"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="61dp"
	    android:text="Background"
	/>

	

</RelativeLayout>